<resources>
    <string name="app_name">Guillaume BDL</string>

    <!-- LoginActivity -->
    <string name="connection">Connexion</string>
    <string name="cybersecurity_logo">Logo Cybersécurité</string>
    <string name="username">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="validate">Connexion</string>
    <string name="password_forget">Mot de passe oublié ?</string>
    <string name="password_retrieve">Identifiant : %1$s\nMot de passe : %2$s</string>
    <string name="ok_btn">OK</string>
    <string name="welcome_name">Bonjour %1$s</string>
    <string name="incorrect_username">Identifiant incorrect</string>
    <string name="incorrect_password">Mot de passe incorrect</string>

    <!-- HomeActivity -->
    <string name="welcome">Bonjour</string>
    <string name="life_cycle">Cycle de vie</string>
    <string name="backup">Sauvegarde</string>
    <string name="permissions">Permissions</string>
    <string name="webservices">Webservices</string>
    <string name="disconnection">Déconnexion</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="agenda">Agenda</string>
    <string name="firebase">Firebase</string>

    <!-- LifeCycleActivity -->
    <string name="state">State</string>
    <string name="toggle_display">Alterner les fragments</string>
    <string name="activity_foreground">Activity Foreground</string>
    <string name="activity_background">Activity Background</string>
    <string name="activity_destroyed">Activity Destroyed</string>
    <string name="fragment_one_foreground">Fragment One Foreground</string>
    <string name="fragment_one_background">Fragment One Background</string>
    <string name="fragment_one_destroyed">Fragment One Destroyed</string>
    <string name="fragment_two_foreground">Fragment Two Foreground</string>
    <string name="fragment_two_background">Fragment Two Background</string>
    <string name="fragment_two_destroyed">Fragment Two Destroyed</string>
    <string name="arrow_down">Flèche Bas</string>
    <string name="next_hint">Next Hint</string>
    <string name="which_activity_stats">Quel est l\'état de cette activité ?</string>
    <string name="which_fragment_state">Et pour les fragments ?</string>
    <string name="click_button">Appuyez sur ce bouton</string>

    <!-- BackupActivity -->
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="date_of_birth">Date de naissance</string>
    <string name="save">Sauvegarder</string>
    <string name="view_data">Voir les données</string>
    <string name="encrypt">Chiffrer</string>
    <string name="decrypt">Déchiffrer</string>
    <string name="save_in_database">Sauvegarder en BDD</string>
    <string name="read_in_database">Lire en BDD</string>
    <string name="empty_input">Veuillez remplir ce champ</string>
    <string name="invalid_date">Cette date n\'est pas valide</string>
    <string name="my_infos">Mes informations</string>
    <string name="alert_saved_infos">Prénom : %1$s\nNom : %2$s\nDate de naissance : %3$s\nÂge : %4$d</string>
    <string name="error_database_read">Erreur lors de la lecture</string>
    <string name="normal">Normale</string>
    <string name="crypted">Chiffrée</string>
    <string name="database">Base de données</string>
    <string name="select_save_type">Sélectionnez le type de sauvegarde que vous souhaitez</string>
    <string name="fill_all_inputs">Remplissez les champs suivants pour sauvegarder vos données</string>

    <!-- PermissionsActivity -->
    <string name="select_picture">Select Picture</string>
    <string name="no_data">No Data</string>
    <string name="latitude_hint">Latitude :</string>
    <string name="longitude_hint">Longitude :</string>
    <string name="image_source">Source de l\'image?</string>
    <string name="name_hint">Nom : %1$s</string>
    <string name="number_hint">Numéro : %1$s</string>
    <string name="email_hint">Email : %1$s</string>
    <string name="error_permissions">Vous n\'avez pas accepté toutes les permissions</string>
    <string name="no_contacts">Vous n\'avez pas de contacts</string>
    <string name="logo_contact">Logo Contact</string>
    <string name="location_not_activated">La localisation n\'est pas activée sur votre téléphone</string>
    <string name="first_visit">Première visite ?</string>
    <string name="visit_text_permissions">Cette page vous permet (une fois les permissions acceptées) de voir vos contacts, votre position GPS et de vous attribuer une photo soit via la galerie ou avec votre caméra.\n\nÀ vous de jouer!</string>

    <!-- WebservicesActivity -->
    <string name="error_users_webservices">Erreur lors de la récupération d\'utilisateurs</string>
    <string name="visit_text_webservices">Cette page vous permet de voir des personnes fictives à partir d\'une API. 10 personnes sont présentes à votre arrivée mais d\'autres s\'ajoutent quand vous descendez.\n\nÀ vous de jouer!</string>

    <!-- Firebase -->
    <string name="email">Email</string>
    <string name="connection_error">Erreur lors de la connexion</string>
    <string name="connection_error_message">Votre email et/ou mot de passe sont incorrects</string>
    <string name="new_question">Nouveau ?</string>
    <string name="register">M\'inscrire</string>
    <string name="too_short_password">Mot de passe trop court</string>
    <string name="register_error">Erreur lors de l\'inscription</string>
    <string name="register_success">Vous êtes maintenant inscrit</string>
    <string name="login_success">Vous êtes maintenant connecté</string>
    <string name="incorrect_email">Email incorrect</string>
    <string name="message_hint">Message : %1$s</string>
    <string name="message">Message</string>

    <!-- Agenda -->
    <string name="under_construction">En construction</string>

    <!-- SharedPreferences -->
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="key_permissions">permissions</string>
    <string name="key_webservices">webservices</string>
    <string name="send_button">Send Button</string>
</resources>
